# detlab

./: .gitignore  LICENSE  README.md  changeme.md  pyproject.toml
.github/workflows/: ci.yml
detections/windows/: certutil_download.yaml  suspicious_encoded_powershell.yaml  suspicious_rundll32.yaml
detlab/: attck.py  main.py  models.py  parser.py  reporting.py  validators.py
docs/: contributing.md  security.md
scripts/: bootstrap.sh
tests/: test_cli.py
